Fixing styles on mobile

--- a/_sass/theme/_layout.scss
+++ b/_sass/theme/_layout.scss
@@ -923,6 +923,7 @@
 
     @include media-query($on-palm) {
       margin-top: $spacing-unit;
+      margin-bottom: $spacing-unit;
     }
 
     &:before {
